comecei a escrever o conteudo

--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 </head>
 <body>
   <main >
-      <header>titulo do site</header>
+      <header>cursos gratis</header>
       <article>
-          <h2>artigo 001</h2>
-          <p>texto do artigo 001</p>
+          <h2>curso de HTMl5 com CSS3</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo corrupti nesciunt delectus, aliquid nisi minima quas laborum, est voluptatibus facilis vitae ipsam minus sit et? Nisi optio deleniti ea debitis.</p>
       </article>
       <article>
-          <h2>artigo 002</h2>
-          <p>texto artigo 002</p>
+          <h2>curso de javaScript</h2>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nihil, ab ratione voluptatibus perspiciatis facere eius accusantium nemo dignissimos praesentium fuga architecto illo amet necessitatibus modi eum? Rem illo tempore quas?</p>
       </article>
   </main>
 </body>
